fixed spacing throughout site

--- a/src/components/LifeHacker.css
+++ b/src/components/LifeHacker.css
@@ -17,12 +17,13 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
 
 * {
   box-sizing: border-box;
-  margin: 5px;
+  /* margin: 5px; */
   padding: 0px;
   font-family: "Poppins", sans-serif;
 }
 
 html {
+  /* width: 1880px; */
   margin: 0px;
   padding: 0px;
   font-family: "Poppins", sans-serif;
@@ -32,8 +33,19 @@ html {
   justify-content: center;
 }
 
-body {
+/* .site-container {
+  align-self: center;
   width: 1880px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
+} */
+
+body {
+  /* width: 1880px; */
+  /* width: 100%; */
   margin: 0px;
   padding: 0px;
   font-family: "Poppins", sans-serif;
@@ -47,24 +59,27 @@ body {
   flex: 1;
   align-self: center;
   background-color: #eeeeee;
-  padding: 10px 40px;
+  padding: 10px 15px;
   margin: 0px;
   display: flex;
   flex-direction: column;
   align-content: center;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+h2 {
+  margin: 5px 0px 10px;
 }
 
 /* WelcomeBar styling */
 .page {
-  /* flex: 1; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   background-color: rgb(228, 228, 228);
   border-radius: 0px 0px 20px 20px;
   padding: 0px 30px 30px;
-  margin: 10px 5px;
+  margin: 10px 0px;
   min-width: 1800px;
   min-height: 80vh;
   color: #2b2b2b;
